[package]
name = "riscv-hypervisor-extension"
version = "0.1.0"
authors = ["gjz010 <gjz010944@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-hypervisor-extension-proc-macro = {path = "riscv-hypervisor-extension-proc-macro"}
[build-dependencies]
cc = "1.0.67"